# contact-bot

./: asset-manifest.json  docker-compose.yml  index.html
ops/: docker-compose.nginx.yml  docker-compose.postgres.yml  init-db.sh
ops/certbot/: Dockerfile  generate-certificate.sh
ops/edge-router/: Dockerfile  entrypoint.sh  nginx.conf.template  renew-certbot.sh
ops/nginx/: Dockerfile  entrypoint.sh
ops/nginx/conf.d/: default.conf  default.https.conf.template
src/api/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/api/alembic/: env.py
src/api/alembic/versions/: a13a65c24f13_create_contact_model.py  acedf784141e_create_remove_created_at.py
src/api/domain/: contact.py
src/api/infrastructure/: container.py
src/api/infrastructure/api/: setup.py
src/api/infrastructure/api/controllers/: main_controller.py
src/api/infrastructure/providers/: postgres_provider.py
src/api/infrastructure/repositories/: contact_repository.py
src/bot/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/bot/db/: db.py
src/bot/handlers/: handler_utils.py  message_handlers.py
src/bot/keyboards/: miniapps_keyboards.py
src/contact-app/: .dockerignore  Dockerfile  nginx.conf  package.json
src/contact-app/src/: App.js  index.css  requests.js
src/contact-app/src/components/: ContactModal.js  LoginForm.js  Navbar.js  ProtectedRoute.js  SearchContactsForm.js
static/js/: main.559e3735.js  main.559e3735.js.map
