[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kirill", email = "kdberdyshev@gmail.com"},
]
dependencies = ["fastapi>=0.115.11", "uvicorn>=0.34.0", "sqlmodel>=0.0.24", "dependency-injector>=4.46.0", "pydantic>=2.10.6", "alembic>=1.15.1", "psycopg2-binary>=2.9.10", "loguru>=0.7.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
