[project]
name = "bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kirill", email = "kdberdyshev@gmail.com"},
]
dependencies = ["aiogram>=3.20.0.post0", "asyncpg>=0.30.0", "pydantic-settings>=2.9.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
